fix: make test run with bogus cert
Signed-off-by: Josef Andersson <josef.andersson@digg.se>